--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -19,6 +19,26 @@ body {
 
 .my_social a img {
   height: 1.5em;
+}
+
+ul {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 1em 4em;
+  padding: 0 1em;
+}
+li {
+  list-style: none;
+  text-align: center;
+
+  grid-column-end: span 2;
+}
+li::before {
+  content: "✨";
+  display: block;
+}
+li:first-child {
+  grid-column-start: 2;
 }
 
 .containers {
