--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,11 @@
   height: 2.5em;
 }
 
-/*.my_social a img {
+.my_social a img {
   height: 1.5em;
 }
 
-ul {
+/*ul {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 1em 4em;
