--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ li:first-child {
   margin: 20px auto;
 }
 
-/*#contact h1 {
+#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
@@ -52,7 +52,7 @@ li:first-child {
   border-bottom: 3px solid #f3f3f3;
 }
 
-.cal {
+/*.cal {
   display: inline-block;
   background: #ffe;
   color: #555;
