--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ li:first-child {
   border-bottom: 3px solid #f3f3f3;
 }
 
-/*.cal {
+.cal {
   display: inline-block;
   background: #ffe;
   color: #555;
@@ -62,7 +62,7 @@ li:first-child {
   transition: all 0.2s linear;
 }
 
-.cal:hover {
+/*.cal:hover {
   transform: scale(2.5);
   transition: all 0.4s linear;
 }
