--- a/css/styles.css
+++ b/css/styles.css
@@ -73,12 +73,12 @@ li:first-child {
   font-size: 15px;
 }
 
-/*.cal th {
+.cal th {
   color: #aaa;
   line-height: 200%;
 }
 
-.cal th:first-child {
+/*.cal th:first-child {
   color: #f00;
 }
 
