--- a/css/styles.css
+++ b/css/styles.css
@@ -78,11 +78,11 @@ li:first-child {
   line-height: 200%;
 }
 
-/*.cal th:first-child {
+.cal th:first-child {
   color: #f00;
 }
 
-.cal th:last-child {
+/*.cal th:last-child {
   color: #04d;
 }
 
