--- a/css/styles.css
+++ b/css/styles.css
@@ -82,11 +82,11 @@ li:first-child {
   color: #f00;
 }
 
-/*.cal th:last-child {
+.cal th:last-child {
   color: #04d;
 }
 
-.cal td {
+/*.cal td {
   padding: 0 2px;
   line-height: 100%;
 }
